--- a/.gitignore
+++ b/.gitignore
@@ -241,3 +241,5 @@ scripts/today_job.sh
 scripts/progress.txt
 scripts/*.pkl
 scripts/.dataset_cache
+scripts/results.tsv
+scripts/total_latency.tsv
