update print programs

--- a/.gitignore
+++ b/.gitignore
@@ -236,6 +236,8 @@ conda/pkg
 
 # dataset files
 scripts/dataset
+scripts/dataset_cpu
+scripts/dataset_gpu
 scripts/*.zip
 scripts/today_job.sh
 scripts/progress.txt
